Prevent section content overflow

--- a/ts2/web/bundle/src/styles/components/form.scss
+++ b/ts2/web/bundle/src/styles/components/form.scss
@@ -27,34 +27,6 @@
         font-size: 0.9rem;
     }
 
-    ul {
-        padding: 0;
-        margin: 0;
-    }
-
-    li {
-        display: flex;
-        flex-flow: column nowrap;
-
-        margin-top: 6pt;
-        margin-bottom: 6pt;
-
-        &:first-child {
-            margin-top: 0;
-        }
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-        label {
-            text-transform: uppercase;
-            letter-spacing: 0.3px;
-            font-weight: 400;
-            font-size: 0.8rem;
-        }
-    }
-
     .btn {
         margin: 0.5rem 0.25rem;
     }
